src/test/ui/nll/constant-thread-locals-issue-47053.stderr
error[E0594]: cannot assign to immutable static item `FOO`
  --> $DIR/constant-thread-locals-issue-47053.rs:10:5
   |
LL |     FOO = 6;
   |     ^^^^^^^ cannot assign

error: aborting due to previous error

